--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   flutter_intl: ^0.0.1
   flutter_svg: ^2.0.9
   expandable_page_view: ^1.0.17
+  intl: ^0.18.1
+  fl_chart: ^0.66.1
 
 dev_dependencies:
   flutter_lints: ^2.0.0
@@ -70,6 +72,10 @@ flutter:
         - asset: assets/fonts/Montserrat-Regular.ttf
         - asset: assets/fonts/Montserrat-Medium.ttf
           weight: 500
+        - asset: assets/fonts/Montserrat-Bold.ttf
+          weight: 700
+
+
   #         style: italic
   #   - family: Trajan Pro
   #     fonts:
